--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </nav>
     </header>
 
-    <section id="home" class="h-screen grid grid-cols-1 md:grid-cols-2 items-center pt-30 pl-7 md:pl-10 bg-gradient-to-r from-indigo-600/30 to-cyan-500/30">
+    <section id="home" class="h-screen grid grid-cols-1 md:grid-cols-2 items-center pt-30 md:pl-10 bg-gradient-to-r from-indigo-600/30 to-cyan-500/30">
         <div>
             <h2 class="text-white text-5xl lg:text-6xl xl:text-7xl  mt-10 font-bold md:mt-0">Internet de <br> <span class="text-sky-500">Alta Performace</span></h2>
 
             <p class="msg max-w-xl mt-3 text-sm font-medium">Fibra óptica real, ultra velocidade, estabilidade total e suporte humano 24h.</p>
 
-            <div class="flex gap-10">
+            <div class="flex gap-7">
                 <a class="btn1 bg-gradient-to-r from-indigo-500 to-cyan-500 rounded-2xl hover:scale-105 transition duration-150" href="#planos">Ver planos</a>
                 <a class="btn2 rounded-2xl" href="#contato">Contratar Agora</a>
             </div>
