--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <section id="home" class="h-screen grid grid-cols-1 md:grid-cols-2 items-center pt-30 md:pl-10 bg-gradient-to-r from-indigo-600/30 to-cyan-500/30">
+    <section id="home" class="h-screen grid grid-cols-1 pl-5 md:grid-cols-2 items-center pt-30 md:pl-10 bg-gradient-to-r from-indigo-600/30 to-cyan-500/30">
         <div>
             <h2 class="text-white text-5xl lg:text-6xl xl:text-7xl  mt-10 font-bold md:mt-0">Internet de <br> <span class="text-sky-500">Alta Performace</span></h2>
 
@@ -108,7 +108,7 @@
     </section>
 
     <footer class="text-sm text-center p-12 text-slate-400">
-        © 2026 Internet Prime • Todos os direitos reservados
+        © 2026 Prime Internet.
         <p>Site desenvolvido por <a class="hover:underline text-semibold" href="https://github.com/devgabriel-2305" target="_blank">Gabriel Damião</a></p>
     </footer>
     <script src="script.js"></script>
