--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="home" class="h-screen grid grid-cols-1 pl-5 md:grid-cols-2 items-center pt-30 md:pl-10 bg-gradient-to-r from-indigo-600/30 to-cyan-500/30">
         <div>
-            <h2 class="text-white text-5xl lg:text-6xl xl:text-7xl  mt-10 font-bold md:mt-0">Internet de <br> <span class="text-sky-500">Alta Performace</span></h2>
+            <h2 class="text-white text-4xl md:text-5xl lg:text-6xl xl:text-7xl  mt-10 font-bold md:mt-0">Internet de <br> <span class="text-sky-500">Alta Performace</span></h2>
 
             <p class="msg max-w-xl mt-3 text-sm font-medium">Fibra óptica real, ultra velocidade, estabilidade total e suporte humano 24h.</p>
 
@@ -69,7 +69,7 @@
     </section>
 
     <section id="beneficios" class="bg-blue-950 pb-15">
-        <h2 class="text-center text-white text-3xl md:text-4xl font-bold p-15 mt-8">Por que escolher a <span class="text-indigo-400">Internet Prime</span>?</h2>
+        <h2 class="text-center text-white text-3xl md:text-4xl font-bold p-15 mt-8">Por que escolher a <span class="text-indigo-400">Prime Internet</span>?</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center text-center space-y-10">
             <div>
                 <p class="text-5xl mb-4">&#x26A1;</p>
