--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <section id="contato">
         <h2 class="text-center text-white text-3xl md:text-4xl font-bold mt-20 mb-8 ">Fale com a <span class="text-indigo-400">gente</span></h2>
-        <div id="form" class="max-w-lg mx-auto py-6">
+        <div id="form" class="w-[512px] mx-auto py-6">
 
             <form class="bg-white/10 border border-white/20 space-y-6 py-9 px-10 rounded-3xl" action="" method="post">
                 <input class="campo p-4 rounded-xl" type="text" name="nome" id="inome" placeholder="Nome" required>
